# signal-decomposition

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
conda_recipe/: meta.yaml
gfosd/: __init__.py  _version.py  data_generators.py  problem.py
notebooks/: 20210224_noncvx_admm_study.ipynb  20210316_comparison_of_using_banded_cholesky_versus_normal_inversion.ipynb  20210317_Basic_Example_Four_Ways.ipynb  20210329__Modified_ADMM_work.ipynb  20210330__First_trial_of_making_new_z-update-Copy1.ipynb  20210330__First_trial_of_making_new_z-update.ipynb  4SignalExample-Copy1.ipynb  4SignalExample.ipynb  AsymmetricNoise-TauOptimization.ipynb  AsymmetricNoise.ipynb  CO2_data_analysis-latex_figures.ipynb  CO2_data_analysis.ipynb  CVXPY-Layers_test_20210218.ipynb  Holdout Validation Work 2021-03-02.ipynb  L1-trend_OSD.ipynb  MinimalExample_CVXPYProblemValueInconsistency.ipynb  Monotone class.ipynb  OSD_ProofOfConcept.ipynb  Piecewise constant cardinality constraint - dynamic programming.ipynb  SD_ADMM_ProofOfConcept-Copy1.ipynb  SD_ADMM_ProofOfConcept.ipynb  Section1_example--noise_smooth_pw-constant.ipynb  Section1_numerical_example.ipynb  Simple_convex_example-3_ways-Copy1.ipynb  Simple_convex_example-3_ways-with_missing_data-Copy1.ipynb  Simple_convex_example-3_ways-with_missing_data.ipynb  Simple_convex_example-3_ways.ipynb  Simple_convex_example-WITH_CONSTRAINTS-3_ways-Copy1.ipynb  Simple_convex_example-WITH_CONSTRAINTS-3_ways.ipynb  Simple_convex_example-graph_form.ipynb  Simple_convex_example-hybrid_algorithm.ipynb  Simple_convex_example-qss.ipynb  (+27 more)
(+85 files in other folders)
