[build-system]
requires = ["setuptools>=75.0", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "sig-decomp"
description = "Optimization-based signal decomposition"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Bennet Meyers", email = "bennetm@stanford.edu" },
]
maintainers = [
  { name = "Sara Miskovich", email = "smiskov@slac.stanford.edu" },
]
keywords = ["convex optimization", "optimization"]
requires-python = ">=3.9"

dependencies = [
    "cvxpy",
    "matplotlib",
    "numpy",
    "scipy",
    "scikit-learn",
    "qss",
    "pandas" # may want to remove once osd is deprecated
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["gfosd*",  "osd*"]

[project.urls]
Homepage = "https://github.com/cvxgrp/signal-decomposition"
"Bug Tracker" = "https://github.com/cvxgrp/signal-decomposition/issues"
